feat: (step1) 기능 수정 및 테스트 구현