@@ -1,25 +1,27 @@
 package cart.integration;
 
 import cart.dao.MemberDao;
+import cart.dao.ProductDao;
 import cart.domain.Member;
-import cart.dto.CartItemQuantityUpdateRequest;
-import cart.dto.CartItemRequest;
-import cart.dto.CartItemResponse;
-import cart.dto.ProductRequest;
+import cart.dto.cartitem.CartItemQuantityUpdateRequest;
+import cart.dto.cartitem.CartItemRequest;
+import cart.dto.cartitem.CartItemResponse;
 import io.restassured.response.ExtractableResponse;
 import io.restassured.response.Response;
+import org.assertj.core.api.SoftAssertions;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
+import static cart.fixture.MemberFixture.하디;
+import static cart.fixture.MemberFixture.현구막;
+import static cart.fixture.ProductFixture.치킨;
+import static cart.fixture.ProductFixture.피자;
 import static io.restassured.RestAssured.given;
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -28,144 +30,172 @@ public class CartItemIntegrationTest extends IntegrationTest {
     @Autowired
     private MemberDao memberDao;
 
-    private Long productId;
-    private Long productId2;
-    private Member member;
-    private Member member2;
+    @Autowired
+    private ProductDao productDao;
+
+    private Long 치킨_아이디;
+    private Long 피자_아이디;
+    private Member 멤버_하디;
+    private Member 멤버_현구막;
 
     @BeforeEach
     void setUp() {
         super.setUp();
 
-        productId = createProduct(new ProductRequest("치킨", 10_000, "http://example.com/chicken.jpg"));
-        productId2 = createProduct(new ProductRequest("피자", 15_000, "http://example.com/pizza.jpg"));
-
-        member = memberDao.getMemberById(1L);
-        member2 = memberDao.getMemberById(2L);
+        치킨_아이디 = productDao.createProduct(치킨);
+        피자_아이디 = productDao.createProduct(피자);
+        memberDao.addMember(하디);
+        memberDao.addMember(현구막);
+        멤버_하디 = memberDao.findMemberByEmail(하디.getEmail()).get();
+        멤버_현구막 = memberDao.findMemberByEmail(현구막.getEmail()).get();
     }
 
-    @DisplayName("장바구니에 아이템을 추가한다.")
     @Test
-    void addCartItem() {
-        CartItemRequest cartItemRequest = new CartItemRequest(productId);
-        ExtractableResponse<Response> response = requestAddCartItem(member, cartItemRequest);
+    void 장바구니에_아이템을_추가한다() {
+        // given
+        CartItemRequest cartItemRequest = new CartItemRequest(치킨_아이디);
 
+        // when
+        ExtractableResponse<Response> response = 장바구니에_아이템_추가(멤버_하디, cartItemRequest);
+
+        // then
         assertThat(response.statusCode()).isEqualTo(HttpStatus.CREATED.value());
     }
 
-    @DisplayName("잘못된 사용자 정보로 장바구니에 아이템을 추가 요청시 실패한다.")
     @Test
-    void addCartItemByIllegalMember() {
-        Member illegalMember = new Member(member.getId(), member.getEmail(), member.getPassword() + "asdf");
-        CartItemRequest cartItemRequest = new CartItemRequest(productId);
-        ExtractableResponse<Response> response = requestAddCartItem(illegalMember, cartItemRequest);
+    void 장바구니에_같은_상품을_두번_추가하면_실패한다() {
+        // given
+        CartItemRequest cartItemRequest = new CartItemRequest(치킨_아이디);
 
+        // when
+        ExtractableResponse<Response> firstResponse = 장바구니에_아이템_추가(멤버_하디, cartItemRequest);
+        ExtractableResponse<Response> secondResponse = 장바구니에_아이템_추가(멤버_하디, cartItemRequest);
+
+        // then
+        SoftAssertions softAssertions = new SoftAssertions();
+        softAssertions.assertThat(firstResponse.statusCode()).isEqualTo(HttpStatus.CREATED.value());
+        softAssertions.assertThat(secondResponse.statusCode()).isEqualTo(HttpStatus.BAD_REQUEST.value());
+        softAssertions.assertAll();
+    }
+
+    @Test
+    void 잘못된_멤버_정보로_장바구니에_아이템을_추가요청시_실패한다() {
+        // given
+        Member illegalMember = new Member(멤버_하디.getId(), 멤버_하디.getEmail(), 멤버_하디.getPassword() + "asdf");
+        CartItemRequest cartItemRequest = new CartItemRequest(피자_아이디);
+
+        // when
+        ExtractableResponse<Response> response = 장바구니에_아이템_추가(illegalMember, cartItemRequest);
+
+        // then
         assertThat(response.statusCode()).isEqualTo(HttpStatus.UNAUTHORIZED.value());
     }
 
-    @DisplayName("사용자가 담은 장바구니 아이템을 조회한다.")
     @Test
-    void getCartItems() {
-        Long cartItemId1 = requestAddCartItemAndGetId(member, productId);
-        Long cartItemId2 = requestAddCartItemAndGetId(member, productId2);
+    void 사용자의_장바구니를_조회한다() {
+        // given
+        장바구니에_아이템_추가(멤버_현구막, new CartItemRequest(피자_아이디));
+        장바구니에_아이템_추가(멤버_현구막, new CartItemRequest(치킨_아이디));
 
-        ExtractableResponse<Response> response = requestGetCartItems(member);
-
-        assertThat(response.statusCode()).isEqualTo(HttpStatus.OK.value());
-
+        // when
+        ExtractableResponse<Response> response = 회원의_전체_장바구니_조회(멤버_현구막);
         List<Long> resultCartItemIds = response.jsonPath().getList(".", CartItemResponse.class).stream()
                 .map(CartItemResponse::getId)
                 .collect(Collectors.toList());
-        assertThat(resultCartItemIds).containsAll(Arrays.asList(cartItemId1, cartItemId2));
+
+        // then
+        SoftAssertions softAssertions = new SoftAssertions();
+        softAssertions.assertThat(response.statusCode()).isEqualTo(HttpStatus.OK.value());
+        softAssertions.assertThat(resultCartItemIds.size()).isEqualTo(2);
+        softAssertions.assertThat(resultCartItemIds).containsAll(List.of(피자_아이디, 치킨_아이디));
+        softAssertions.assertAll();
     }
 
-    @DisplayName("장바구니에 담긴 아이템의 수량을 변경한다.")
     @Test
-    void increaseCartItemQuantity() {
-        Long cartItemId = requestAddCartItemAndGetId(member, productId);
+    void 장바구니에_담긴_아이템의_수량을_변경한다() {
+        // given
+        ExtractableResponse<Response> addResponse = 장바구니에_아이템_추가(멤버_현구막, new CartItemRequest(피자_아이디));
+        Long cartItemId = Long.parseLong(addResponse.header("Location").split("/")[2]);
+        Long updateQuantity = 100L;
 
-        ExtractableResponse<Response> response = requestUpdateCartItemQuantity(member, cartItemId, 10);
-        assertThat(response.statusCode()).isEqualTo(HttpStatus.OK.value());
+        // when
+        ExtractableResponse<Response> response = 장바구니_아이템_수량_변경(멤버_현구막, cartItemId, updateQuantity);
+        ExtractableResponse<Response> findResponse = 회원의_전체_장바구니_조회(멤버_현구막);
+        List<CartItemResponse> cartItems = findResponse.jsonPath().getList(".", CartItemResponse.class);
 
-        ExtractableResponse<Response> cartItemsResponse = requestGetCartItems(member);
-
-        Optional<CartItemResponse> selectedCartItemResponse = cartItemsResponse.jsonPath()
-                .getList(".", CartItemResponse.class)
-                .stream()
-                .filter(cartItemResponse -> cartItemResponse.getId().equals(cartItemId))
-                .findFirst();
-
-        assertThat(selectedCartItemResponse.isPresent()).isTrue();
-        assertThat(selectedCartItemResponse.get().getQuantity()).isEqualTo(10);
+        // then
+        SoftAssertions softAssertions = new SoftAssertions();
+        softAssertions.assertThat(response.statusCode()).isEqualTo(HttpStatus.OK.value());
+        softAssertions.assertThat(cartItems.size()).isEqualTo(1);
+        softAssertions.assertThat(cartItems.get(0).getQuantity()).isEqualTo(updateQuantity);
+        softAssertions.assertAll();
     }
 
-    @DisplayName("장바구니에 담긴 아이템의 수량을 0으로 변경하면, 장바구니에서 아이템이 삭제된다.")
     @Test
-    void decreaseCartItemQuantityToZero() {
-        Long cartItemId = requestAddCartItemAndGetId(member, productId);
+    void 장바구니에_담긴_아이템의_수량을_0으로_변경하면_장바구니에서_아이템이_삭제된다() {
+        // given
+        ExtractableResponse<Response> addResponse = 장바구니에_아이템_추가(멤버_현구막, new CartItemRequest(피자_아이디));
+        Long cartItemId = Long.parseLong(addResponse.header("Location").split("/")[2]);
+        Long updateQuantity = 0L;
 
-        ExtractableResponse<Response> response = requestUpdateCartItemQuantity(member, cartItemId, 0);
-        assertThat(response.statusCode()).isEqualTo(HttpStatus.OK.value());
+        // when
+        ExtractableResponse<Response> response = 장바구니_아이템_수량_변경(멤버_현구막, cartItemId, updateQuantity);
+        ExtractableResponse<Response> findResponse = 회원의_전체_장바구니_조회(멤버_현구막);
+        List<CartItemResponse> cartItems = findResponse.jsonPath().getList(".", CartItemResponse.class);
 
-        ExtractableResponse<Response> cartItemsResponse = requestGetCartItems(member);
-
-        Optional<CartItemResponse> selectedCartItemResponse = cartItemsResponse.jsonPath()
-                .getList(".", CartItemResponse.class)
-                .stream()
-                .filter(cartItemResponse -> cartItemResponse.getId().equals(cartItemId))
-                .findFirst();
-
-        assertThat(selectedCartItemResponse.isPresent()).isFalse();
+        // then
+        SoftAssertions softAssertions = new SoftAssertions();
+        softAssertions.assertThat(response.statusCode()).isEqualTo(HttpStatus.OK.value());
+        softAssertions.assertThat(cartItems).isEmpty();
+        softAssertions.assertAll();
     }
 
-    @DisplayName("다른 사용자가 담은 장바구니 아이템의 수량을 변경하려 하면 실패한다.")
     @Test
-    void updateOtherMembersCartItem() {
-        Long cartItemId = requestAddCartItemAndGetId(member, productId);
+    void 다른_사용자가_담은_장바구니_아이템의_수량을_변경하려하면_실패한다() {
+        // given
+        ExtractableResponse<Response> addResponse = 장바구니에_아이템_추가(멤버_현구막, new CartItemRequest(피자_아이디));
+        Long cartItemId = Long.parseLong(addResponse.header("Location").split("/")[2]);
+        Long updateQuantity = 100L;
 
-        ExtractableResponse<Response> response = requestUpdateCartItemQuantity(member2, cartItemId, 10);
+        // when
+        ExtractableResponse<Response> response = 장바구니_아이템_수량_변경(멤버_하디, cartItemId, updateQuantity);
 
+        // then
         assertThat(response.statusCode()).isEqualTo(HttpStatus.FORBIDDEN.value());
     }
 
-    @DisplayName("장바구니에 담긴 아이템을 삭제한다.")
     @Test
-    void removeCartItem() {
-        Long cartItemId = requestAddCartItemAndGetId(member, productId);
+    void 장바구니에_담긴_아이템을_삭제한다() {
+        // given
+        ExtractableResponse<Response> addResponse = 장바구니에_아이템_추가(멤버_현구막, new CartItemRequest(피자_아이디));
+        Long cartItemId = Long.parseLong(addResponse.header("Location").split("/")[2]);
 
-        ExtractableResponse<Response> response = requestDeleteCartItem(cartItemId);
+        // when
+        ExtractableResponse<Response> response = 장바구니_아이템_삭제(멤버_현구막, cartItemId);
+        List<CartItemResponse> cartItems = 회원의_전체_장바구니_조회(멤버_현구막).jsonPath().getList(".", CartItemResponse.class);
 
-        assertThat(response.statusCode()).isEqualTo(HttpStatus.NO_CONTENT.value());
-
-        ExtractableResponse<Response> cartItemsResponse = requestGetCartItems(member);
-
-        Optional<CartItemResponse> selectedCartItemResponse = cartItemsResponse.jsonPath()
-                .getList(".", CartItemResponse.class)
-                .stream()
-                .filter(cartItemResponse -> cartItemResponse.getId().equals(cartItemId))
-                .findFirst();
-
-        assertThat(selectedCartItemResponse.isPresent()).isFalse();
+        // then
+        SoftAssertions softAssertions = new SoftAssertions();
+        softAssertions.assertThat(response.statusCode()).isEqualTo(HttpStatus.NO_CONTENT.value());
+        softAssertions.assertThat(cartItems).isEmpty();
+        softAssertions.assertAll();
     }
 
-    private Long createProduct(ProductRequest productRequest) {
-        ExtractableResponse<Response> response = given()
-                .contentType(MediaType.APPLICATION_JSON_VALUE)
-                .body(productRequest)
-                .when()
-                .post("/products")
-                .then()
-                .statusCode(HttpStatus.CREATED.value())
-                .extract();
+    @Test
+    void 다른_사용자가_담은_장바구니_아이템을_삭제하려하면_실패한다() {
+        // given
+        ExtractableResponse<Response> addResponse = 장바구니에_아이템_추가(멤버_현구막, new CartItemRequest(피자_아이디));
+        Long cartItemId = Long.parseLong(addResponse.header("Location").split("/")[2]);
+        Long updateQuantity = 100L;
 
-        return getIdFromCreatedResponse(response);
+        // when
+        ExtractableResponse<Response> response = 장바구니_아이템_삭제(멤버_하디, cartItemId);
+
+        // then
+        assertThat(response.statusCode()).isEqualTo(HttpStatus.FORBIDDEN.value());
     }
 
-    private long getIdFromCreatedResponse(ExtractableResponse<Response> response) {
-        return Long.parseLong(response.header("Location").split("/")[2]);
-    }
-
-    private ExtractableResponse<Response> requestAddCartItem(Member member, CartItemRequest cartItemRequest) {
+    private ExtractableResponse<Response> 장바구니에_아이템_추가(Member member, CartItemRequest cartItemRequest) {
         return given().log().all()
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .auth().preemptive().basic(member.getEmail(), member.getPassword())
@@ -177,12 +207,7 @@ public class CartItemIntegrationTest extends IntegrationTest {
                 .extract();
     }
 
-    private Long requestAddCartItemAndGetId(Member member, Long productId) {
-        ExtractableResponse<Response> response = requestAddCartItem(member, new CartItemRequest(productId));
-        return getIdFromCreatedResponse(response);
-    }
-
-    private ExtractableResponse<Response> requestGetCartItems(Member member) {
+    private ExtractableResponse<Response> 회원의_전체_장바구니_조회(Member member) {
         return given().log().all()
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .auth().preemptive().basic(member.getEmail(), member.getPassword())
@@ -193,7 +218,7 @@ public class CartItemIntegrationTest extends IntegrationTest {
                 .extract();
     }
 
-    private ExtractableResponse<Response> requestUpdateCartItemQuantity(Member member, Long cartItemId, int quantity) {
+    private ExtractableResponse<Response> 장바구니_아이템_수량_변경(Member member, Long cartItemId, long quantity) {
         CartItemQuantityUpdateRequest quantityUpdateRequest = new CartItemQuantityUpdateRequest(quantity);
         return given().log().all()
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
@@ -206,7 +231,7 @@ public class CartItemIntegrationTest extends IntegrationTest {
                 .extract();
     }
 
-    private ExtractableResponse<Response> requestDeleteCartItem(Long cartItemId) {
+    private ExtractableResponse<Response> 장바구니_아이템_삭제(Member member, Long cartItemId) {
         return given().log().all()
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .auth().preemptive().basic(member.getEmail(), member.getPassword())
